# DxGraphicsEngine

./: .gitignore  CMakeLists.txt  main.cpp
engine/: CMakeLists.txt  DxUtils.h  Engine.cpp  Engine.h  EngineContext.h  Globals.h  Logger.h  Types.h  Utils.cmake
engine/core/: Engine.cpp  Engine.h  EngineConfigs.h  EngineContext.h  EngineContextInternal.h
engine/libs/: Allocators.h  CommandLists.h  DescriptorHeaps.h  DxFence.h  DxQueues.h  Event.h  Registry.h
engine/systems/: DxQueueSystem.h  InputSystem.h  QueueSystem.h  SystemBase.h
engine/systems/render/: RenderSystem.h
engine/systems/ui/: EditorUISystem.h  RenderUISystem.h  UISystem.h
engine/systems/window/: SwapChainSystem.h  WindowSystem.h
engine/ui/: ImGuiLayer.h
